# Game-of-Life

./: .gitignore  CMakeLists.txt
data/: deterministic_1.vtk  deterministic_10.vtk  deterministic_108.vtk  deterministic_11.vtk  deterministic_12.vtk  deterministic_13.vtk  deterministic_14.vtk  deterministic_15.vtk  deterministic_16.vtk  deterministic_161.vtk  deterministic_17.vtk  deterministic_18.vtk  deterministic_19.vtk  deterministic_2.vtk  deterministic_20.vtk  deterministic_21.vtk  deterministic_22.vtk  deterministic_23.vtk  deterministic_24.vtk  deterministic_25.vtk  deterministic_26.vtk  deterministic_27.vtk  deterministic_28.vtk  deterministic_29.vtk  deterministic_3.vtk  deterministic_30.vtk  deterministic_31.vtk  deterministic_32.vtk  deterministic_33.vtk  deterministic_34.vtk  deterministic_35.vtk  deterministic_36.vtk  deterministic_37.vtk  deterministic_38.vtk  deterministic_39.vtk  deterministic_4.vtk  deterministic_40.vtk  deterministic_41.vtk  deterministic_42.vtk  deterministic_43.vtk  (+417 more)
include/: .simulation_utils.h.swp  simulation_utils.h
src/: main.cpp  simulation_utils.cpp
test/: simulation_test.cpp
